# native-activity-tests

./: .gitignore  NOTES.md  NOTES.org
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/app/: CMakeLists.txt  main.cpp
app/src/main/cpp/fooext/: CMakeLists.txt  foo.c  foo.h
app/src/main/cpp/fooext/lua/: CMakeLists.txt
app/src/main/res/values/: strings.xml
